--- a/introduction /index.html
+++ b/introduction /index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="mystyle.css">   
-<title>My Profile Web Page</title>
-</head>
+    <title>Personal Profile</title>
+    </head>
 <body>
- 
-<h1>Personal Profile Web page </h1>
-<p>
- 
-About Me<br>
-Name: Jonathan Mark Agbulos<br>
- 
-Education / Achievements<br>
-College: Asia Pacific College<br>
-Course: IT<br>
-IT Experience: UI/UX<br>
-Hobbies & Interests: Playing Games, Listening to music<br>
-Goals In Life / Dream: To beome successful and wealthy in life<br>
-Picture Gallery<br>
- <img src="https://i.pinimg.com/originals/f7/2a/64/f72a64f5dac334b48f793315479caf39.jpg" alt="Me" width="500" height="600">
-</p>
+    <div class="container">
+        <h1>Personal Profile Web page</h1>
 
+        <h3>About Me</h3>
+        <p>Name: <strong>Jonathan Mark Agbulos</strong></p>
 
- 
-  
+        <h3>Education / Achievements</h3>
+        <p>College: Asia Pacific College<br>
+           Course: IT</p>
+
+        <h3>IT Experience:</h3>
+        <p>UI/UX</p>
+
+        <h3>Hobbies & Interests:</h3>
+        <p>Playing Games, Listening to music</p>
+
+        <h3>Goals in Life / Dream:</h3>
+        <p>To become successful and wealthy in life</p>
+
+        <h3>Picture Gallery</h3>
+        <img src="path/to/your/cat/image.jpg" alt="Smiling Cat"> 
+    </div>
 </body>
 </html>
