--- a/introduction /index.html
+++ b/introduction /index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Personal Profile</title>
-    </head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+</head>
 <body>
     <div class="container">
         <h1>Personal Profile Web page</h1>
