--- a/introduction /index.html
+++ b/introduction /index.html
@@ -8,7 +8,7 @@
 <h1>Personal Profile Web page </h1>
 <p>
  
-About Me<br>
+<h2>About Me</h2><br>
 Name: Jonathan Mark Agbulos<br>
  
 Education / Achievements<br>
