--- a/introduction /index.html
+++ b/introduction /index.html
@@ -8,16 +8,17 @@
  
 <h1>Personal Profile Web page </h1>
 <p>
- 
-<h3>About Me</h3>
-Name: Jonathan Mark Agbulos<br>
-Education / Achievements<br>
-College: Asia Pacific College<br>
-Course: IT<br>
-IT Experience: UI/UX<br>
-Hobbies & Interests: Playing Games, Listening to music<br>
-Goals In Life / Dream: To beome successful and wealthy in life<br>
-Picture Gallery<br>
+
+<h2>About Me</h2>
+
+<h3>Name:</h3>Jonathan Mark Agbulos<br>
+<h3>Education / Achievements</h3>
+<h3>College:</h3> Asia Pacific College<br>
+<h3>Course:</h3> IT<br>
+<h3>IT Experience:</h3> UI/UX<br>
+<h3>Hobbies & Interests:</h3> Playing Games, Listening to music<br>
+<h3>Goals In Life / Dream:</h3> To beome successful and wealthy in life<br>
+<h3>Picture Gallery</h3>
  <img src="https://i.pinimg.com/originals/f7/2a/64/f72a64f5dac334b48f793315479caf39.jpg" alt="Me" width="500" height="600">
 </p>
 
