--- a/introduction /index.html
+++ b/introduction /index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>WEBPROG IT242 Introduction - Jonathan Mark Agbulos</title>
 </head>
 <body>
  
@@ -12,10 +12,13 @@ About Me<br>
 Name: Jonathan Mark Agbulos<br>
  
 Education / Achievements<br>
+Elementary: Hen. Pio del Pilar Elementary School
+Junior Highschool: Southeastern College
+Senior Highschool: Arellano University Jose Abad Santos Campsus
 College: Asia Pacific College<br>
 Course: IT<br>
 IT Experience: UI/UX<br>
-Hobbies & Interests: Playing Games, Listening to music<br>
+Hobbies & Interests: Playing Games, Listening to music, Reading Manga/Manhwa<br>
 Goals In Life / Dream: To beome successful and wealthy in life<br>
 Picture Gallery<br>
  <img src="https://i.pinimg.com/originals/f7/2a/64/f72a64f5dac334b48f793315479caf39.jpg" alt="Me" width="500" height="600">
