--- a/introduction /index.html
+++ b/introduction /index.html
@@ -28,12 +28,10 @@ Picture Gallery<br>
 <h1>Create a Flex Container</h1>
 
 <div class="container">
-  <div>Item 1</div>
-  <div>Item 2</div>
-  <div>Item 3</div>
-  <div>Item 4</div>
-  <div>Item 5</div>
-  <div>Item 6</div>     
+  <div><img src="https://i.pinimg.com/originals/f7/2a/64/f72a64f5dac334b48f793315479caf39.jpg" alt="Me" width="500" height="600"></div>
+  <div><img src="https://i.pinimg.com/originals/f7/2a/64/f72a64f5dac334b48f793315479caf39.jpg" alt="Me" width="500" height="600"></div>
+  <div><img src="https://i.pinimg.com/originals/f7/2a/64/f72a64f5dac334b48f793315479caf39.jpg" alt="Me" width="500" height="600"></div>
+  <div><img src="https://i.pinimg.com/originals/f7/2a/64/f72a64f5dac334b48f793315479caf39.jpg" alt="Me" width="500" height="600"></div>    
 </div>
  
   
