--- a/introduction /index.html
+++ b/introduction /index.html
@@ -12,13 +12,13 @@
 About Me<br>
 Name: Jonathan Mark Agbulos<br>
  
-Education / Achievements<br>
-Elementary: Hen. Pio del Pilar Elementary School
-Junior Highschool: Southeastern College
-Senior Highschool: Arellano University Jose Abad Santos Campsus
+Education<br>
+Elementary: Hen. Pio del Pilar Elementary School<br>
+Junior Highschool: Southeastern College<br>
+Senior Highschool: Arellano University Jose Abad Santos Campsus<br>
 College: Asia Pacific College<br>
 Course: IT<br>
-IT Experience: UI/UX<br>
+IT Experience: UI/UX, SQL<br>
 Hobbies & Interests: Playing Games, Listening to music, Reading Manga/Manhwa<br>
 Goals In Life / Dream: To beome successful and wealthy in life<br>
 Picture Gallery<br>
