--- a/introduction /index.html
+++ b/introduction /index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>WEBPROG IT242 Introduction - Jonathan Mark Agbulos</title>
+<link rel="stylesheet" href="css/css-grid.css">
 </head>
 <body>
  
@@ -24,7 +25,12 @@ Picture Gallery<br>
  <img src="https://i.pinimg.com/originals/f7/2a/64/f72a64f5dac334b48f793315479caf39.jpg" alt="Me" width="500" height="600">
 </p>
 
-
+<div class="container">
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+</div>
  
   
 </body>
