--- a/introduction /index.html
+++ b/introduction /index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="css/css-grid.css">
 </head>
 <body>
- 
+ <div class="logo"><div>
 <h1>Personal Profile Web page </h1>
 <p>
  
