--- a/introduction /index.html
+++ b/introduction /index.html
@@ -3,12 +3,18 @@
 <head>
 <title>WEBPROG IT242 Introduction - Jonathan Mark Agbulos</title>
 <link rel="stylesheet" href="css/css-grid.css">
+<style>
+    body {
+  background-image: url('pictures/cybersigilism.png');
+  background-repeat: no-repeat;
+}
+ </style>
 </head>
 <body>
  <div class="logo"><div>
 <h1>Personal Profile Web page </h1>
 <p>
- 
+
 About Me<br>
 Name: Jonathan Mark Agbulos<br>
  
