Update index.html with personal details and images
Added personal information and image gallery to the profile page.

--- a/introduction /index.html
+++ b/introduction /index.html
@@ -15,7 +15,13 @@
 <h1>Personal Profile Web page </h1>
 <p>
 <p class="fontcol"></p>
-About Me<br>
+</p>
+
+<div class="container">
+    <div><img src="pictures/WIN_20241021_08_43_32_Pro.jpg" alt="Me" width="200" height="200"></div>
+    <div><img src="https://i.pinimg.com/originals/f7/2a/64/f72a64f5dac334b48f793315479caf39.jpg" alt="catto" width="200" height="200"></div>
+    <div><img src="pictures/IMG_20251123_145257(1).jpg" alt="Me" width="200" height="200"></div>
+    <div>About Me<br>
 Name: Jonathan Mark Agbulos<br>
  
 Education / Achievements<br>
@@ -27,14 +33,7 @@ Course: IT<br>
 IT Experience: UI/UX<br>
 Hobbies & Interests: Playing Games, Listening to music, Reading Manga/Manhwa<br>
 Goals In Life / Dream: To beome successful and wealthy in life<br>
-Picture Gallery<br>
-</p>
-
-<div class="container">
-    <div><img src="pictures/WIN_20241021_08_43_32_Pro.jpg" alt="Me" width="200" height="200"></div>
-    <div><img src="https://i.pinimg.com/originals/f7/2a/64/f72a64f5dac334b48f793315479caf39.jpg" alt="catto" width="200" height="200"></div>
-    <div><img src="pictures/IMG_20251123_145257(1).jpg" alt="Me" width="200" height="200"></div>
-    <div>4</div>
+Picture Gallery<br></div>
 </div>
  
   
