--- a/introduction /index.html
+++ b/introduction /index.html
@@ -48,7 +48,7 @@ Picture Gallery<br>
     <div class="content-wrapper">
         <div id="content1" class="tab-content">
             <div class="content">
-                <img src="https://grayravens.com/wiki/Selena:_Capriccio#/media/File:Dialogue-Capriccio-Awaken-Icon.png" alt="Me" width="200" height="200">
+                <img src="https://grayravens.com/w/index.php?curid=2600" alt="Me" width="200" height="200">
                 <h1>Information</h1>
                 <p>
                 Selena's backup frame.<br>
